# GhostMail

./: .env.example  .gitignore  GhostMail.md  GhostMail.txt  LICENSE  README.md  SETUP.md  generate_icon.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  app.html  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gmail_api.rs  google_auth.rs  lib.rs  main.rs  tray.rs
src/components/: AppLauncher.tsx  BulkActions.tsx  CommandPalette.tsx  ComposeModal.tsx  ContextMenu.tsx  Dashboard.tsx  EmailList.tsx  EmailView.tsx  Header.tsx  InlineReply.tsx  LabelManager.tsx  LoginScreen.tsx  MobileSidebar.tsx  Onboarding.tsx  ProfileDropdown.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SnoozePicker.tsx  StatusBar.tsx  Toast.tsx
src/data/: googleApps.ts  mockEmails.ts
src/hooks/: useKeyboard.ts
src/lib/components/: AppLauncher.svelte  BulkActions.svelte  EmailList.svelte  EmailView.svelte  LoadingSpinner.svelte  LoginScreen.svelte  SearchBar.svelte  Sidebar.svelte  Toast.svelte
src/lib/services/: gmailService.ts  googleApps.ts  googleAuth.ts
src/lib/stores/: auth.ts  emails.ts  filters.ts  ui.ts
src/lib/themes/: tokyonight.css
src/lib/types/: index.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/services/: auth.ts  gmail.ts
src/stores/: useStore.ts
src/types/: index.ts
